fix: remove overflow hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1568,7 +1568,6 @@ dialog::backdrop {
   dialog>div {
     background: var(--surface-1);
     border-radius: var(--radius-3);
-    overflow: hidden;
   }
 
   /* Target specific modal sizes */
